--- a/proyecto/src/components/Navbar.astro
+++ b/proyecto/src/components/Navbar.astro
@@ -8,13 +8,13 @@
     </div></a>
         
 
-    <ul class="hidden md:flex gap-6 text-md">
-      <li><a href="/" class="hover:underline">Inicio</a></li>
-      <li><a href="/servicios" class="hover:underline">Servicios</a></li>
-      <li><a href="/servicios#abdominoplastia" class="hover:underline">Procedimientos</a></li>
-      <li><a href="/index#resultados" class="hover:underline">Resultados</a></li>
-      <li><a href="/index#testimonios" class="hover:underline">Testimonios</a></li>
-      <li><a href="/index#contacto" class="text-primary font-medium">Contacto</a></li>
+  <ul class="hidden md:flex gap-6 text-md" style="font-family:'Playfair Display', serif;">
+  <li><a href="/" class="hover:underline">Inicio</a></li>
+  <li><a href="/servicios" class="hover:underline">Servicios</a></li>
+  <li><a href="/#servicios" class="hover:underline">Procedimientos</a></li>
+  <li><a href="/#resultados" class="hover:underline">Resultados</a></li>
+  <li><a href="/#testimonios" class="hover:underline">Testimonios</a></li>
+  <li><a href="/#contacto" class="text-primary font-medium">Contacto</a></li>
     </ul>
     <a href="https://wa.me/573015031356?text=Hola%20Dra.%20Nitiz%2C%20quiero%20agendar%20una%20consulta" target="_blank" class="md:inline-block px-4 py-2 rounded-lg bg-[#143B5C] text-white">Reservar</a>
   </div>
