--- a/proyecto/src/layouts/Layout.astro
+++ b/proyecto/src/layouts/Layout.astro
@@ -47,7 +47,7 @@ import AosInitializer from '../components/AosInitializer.astro';
 	}
 
 	  :root { --brand: #163c60; --muted: #cac9ce; }
-  body { font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; color: #123; }
-  h1,h2,h3 { font-family: 'Playfair Display', serif; color: var(--brand); }
+	body { font-family: 'Playfair Display', serif; color: #123; }
+	h1,h2,h3 { font-family: 'Playfair Display', serif; color: var(--brand); }
 </style>
 
