--- a/proyecto/src/layouts/Layout.astro
+++ b/proyecto/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ import AosInitializer from '../components/AosInitializer.astro';
 	</head>
 	<body>
 		<slot />
-		<AosInitializer client:only />
+		<AosInitializer />
 	</body>
 </html>
 
